--- a/installer/resources/themes/console/dark/proxy.css
+++ b/installer/resources/themes/console/dark/proxy.css
@@ -38,16 +38,16 @@ hr:last-child{margin-top:20px;margin-bottom:20px}
 
 /* jump links */
 #jumplinks a:first-of-type{margin-left:19px}
-#jumplinks a{margin:3px 0 3px 5px;padding:9px 12px 9px 34px;float:left;text-shadow:var(--txt_shadow);box-shadow:var(--outline),var(--bevel);background:url(../images/arrow_right.svg) no-repeat 10px center / 20px,var(--badge);animation:fade .5s ease 3s both}
+#jumplinks a{margin:3px 0 3px 5px;padding:9px 12px 9px 34px;float:left;text-shadow:var(--txt_shadow);box-shadow:var(--outline),var(--bevel);background:url(../images/arrow_right.svg) no-repeat 10px center/20px,var(--badge);animation:fade .5s ease 3s both}
 #jumplinks br{display:none}
 #jumplinks h4{margin:0 15px 5px;padding:0 0 10px}
 #jumplinks{margin-bottom:50px}
-#jumplinks #linuxfarm{background:url(../images/linuxfarm.svg) no-repeat 10px center / 20px,var(--badge) !important}
-#jumplinks #notbob{background:url(../images/notbob.png) no-repeat 10px center / 20px,var(--badge)}
-#jumplinks #reg{background:url(../images/reg.svg) no-repeat 10px center / 20px,var(--badge)}
-#jumplinks #stats{background:url(../images/stats.svg) no-repeat 10px center / 20px,var(--badge)}
-#proxy_error #jumplinks a:hover,#proxy_error #jumplinks a:focus{box-shadow:var(--badge_shadow_hover);background:url(../images/arrow_right.svg) no-repeat 10px center / 20px,var(--badge_hover) !important}
-#proxy_error #jumplinks a:active{padding:10px 11px 8px 35px;text-shadow:0 1px 1px rgba(0,0,0,.8);box-shadow:var(--badge_shadow_hover),var(--btn_shadow_active);background:url(../images/arrow_right.svg) no-repeat 12px calc(50% + 1px) / 19px,var(--badge_active) !important;background-blend-mode:luminosity}
+#jumplinks #linuxfarm{background:url(../images/linuxfarm.svg) no-repeat 10px center/20px,var(--badge)!important;display:none}
+#jumplinks #notbob{background:url(../images/notbob.png) no-repeat 10px center/20px,var(--badge)}
+#jumplinks #reg{background:url(../images/reg.svg) no-repeat 10px center/20px,var(--badge)}
+#jumplinks #stats{background:url(../images/stats.svg) no-repeat 10px center/20px,var(--badge);display:none}
+#proxy_error #jumplinks a:hover,#proxy_error #jumplinks a:focus{box-shadow:var(--badge_shadow_hover);background:url(../images/arrow_right.svg) no-repeat 10px center/20px,var(--badge_hover) !important}
+#proxy_error #jumplinks a:active{padding:10px 11px 8px 35px;text-shadow:0 1px 1px rgba(0,0,0,.8);box-shadow:var(--badge_shadow_hover),var(--btn_shadow_active);background:url(../images/arrow_right.svg) no-repeat 12px calc(50% + 1px)/19px,var(--badge_active) !important;background-blend-mode:luminosity}
 
 .option{padding:10px 20px 0;border:1px solid #252;box-shadow:var(--fatshadow);background:linear-gradient(180deg,rgba(0,32,0,.5),rgba(0,16,0,.5))}
 .option:last-of-type{margin-bottom:11px}
@@ -68,7 +68,7 @@ hr:last-child{margin-top:20px;margin-bottom:20px}
 #proxyNewHost{margin:20px auto 0 100px;width:calc(100% - 100px);border-collapse:collapse;box-shadow:var(--fatshadow)}
 #proxyNewHost td:first-child{font-weight:700}
 #proxyNewHost td{padding:8px;font-size:10pt;border:1px solid #131;background:#000}
-#warning{margin:20px 20px 20px 248px;padding:10px 30px 20px 100px;min-width:300px;border:1px solid #252;word-wrap:break-word;text-align:justify;font-size:10pt;border:5px solid #010;border-image:repeating-linear-gradient(135deg,#010,#010 20px,#660 20px,#660 40px,#010 40px) 5 repeat repeat;border-image-width:5px;border-image-outset:1px;box-shadow:var(--shadow_warn);background:var(--itooplus) no-repeat 28px calc(50% + 16px) / auto 118px,var(--mainbg)}
+#warning{margin:20px 20px 20px 248px;padding:10px 30px 20px 100px;min-width:300px;border:1px solid #252;word-wrap:break-word;text-align:justify;font-size:10pt;border:5px solid #010;border-image:repeating-linear-gradient(135deg,#010,#010 20px,#660 20px,#660 40px,#010 40px) 5 repeat repeat;border-image-width:5px;border-image-outset:1px;box-shadow:var(--shadow_warn);background:var(--itooplus) no-repeat 28px calc(50% + 16px)/auto 118px,var(--mainbg)}
 #warning .formaction+h4{margin-top:-10px}
 #warning .formaction{padding:10px 0 0;text-align:right}
 #warning h3{margin:-9px -29px 15px -99px;padding:9px 10px 7px;letter-spacing:.1em;text-align:left;font-size:11.5pt;text-transform:uppercase;text-shadow:0 0 2px #010;border-bottom:1px solid #700}
@@ -89,7 +89,7 @@ hr:last-child{margin-top:20px;margin-bottom:20px}
 #warning p{margin:0 15px 10px 15px;font-size:110%}
 #warning .option .formaction{margin:20px -20px 0;padding:11px 12px 10px;border-top:var(--border_soft);background:none}
 #warning p+.formaction{margin:0 0 20px}
-#warning #proxyrequest{margin-bottom:12px;padding:9px 10px 9px 42px;display:inline-block;word-break:break-all;font-size:115%;background:var(--link) no-repeat 20px center / 16px}
+#warning #proxyrequest{margin-bottom:12px;padding:9px 10px 9px 42px;display:inline-block;word-break:break-all;font-size:115%;background:var(--link) no-repeat 20px center/16px}
 
 /* console error pages */
 h1+.sorry,#console_404 .sorry{margin:-1px 5px 10px 226px;padding:20px 20px 20px 70px;min-width:595px;word-wrap:break-word;text-align:justify;font-size:10pt;border:var(--border);border-radius:0 0 4px 4px;box-shadow:var(--highlight),inset 0 0 0 2px #600,inset 0 0 0 3px #000;background:var(--err) no-repeat 15px 45%,linear-gradient(180deg,rgba(255,255,255,.05),rgba(0,0,0,.4)),repeating-linear-gradient(180deg,rgba(0,0,0,.4) 2px,rgba(0,48,0,.7) 4px);background-size:44px,100%,100% 4px}
