--- a/installer/resources/themes/console/midnight/proxy.css
+++ b/installer/resources/themes/console/midnight/proxy.css
@@ -67,14 +67,14 @@ button.go:active,button.accept:active{background:var(--yes) no-repeat 8px center
 #jumplinks{margin-bottom:50px}
 #jumplinks h4{margin:0 15px 15px;padding:0 0 10px}
 #jumplinks br{display:none}
-#jumplinks a{margin:3px 0 3px 6px;padding:9px 12px 9px 35px;float:left;text-shadow:var(--txt_shadow);-webkit-text-stroke:0;box-shadow:var(--outline),var(--bevel);background:url(../images/arrow_right.svg) no-repeat 10px center / 20px,var(--badge);animation:fade .5s ease 3s both}
+#jumplinks a{margin:3px 0 3px 6px;padding:9px 12px 9px 35px;float:left;text-shadow:var(--txt_shadow);-webkit-text-stroke:0;box-shadow:var(--outline),var(--bevel);background:url(../images/arrow_right.svg) no-repeat 10px center/20px,var(--badge);animation:fade .5s ease 3s both}
 #jumplinks a:first-of-type{margin-left:19px}
-#jumplinks #linuxfarm{background:url(../images/linuxfarm.svg) no-repeat 10px center / 20px,var(--badge) !important}
-#jumplinks #notbob{background:url(../images/notbob.png) no-repeat 10px center / 20px,var(--badge)}
-#jumplinks #reg{background:url(../images/reg.svg) no-repeat 10px center / 20px,var(--badge)}
-#jumplinks #stats{background:url(../images/stats.svg) no-repeat 10px center / 20px,var(--badge)}
-#proxy_error #jumplinks a:hover,#proxy_error #jumplinks a:focus{box-shadow:var(--outline),inset 0 0 0 1px var(--hover);background:url(../images/arrow_right.svg) no-repeat 10px center / 20px,var(--badge_hover) !important}
-#proxy_error #jumplinks a:active{padding:10px 12px 8px 35px;color:var(--hover);text-shadow:0 1px 1px rgba(0,0,0,.8);box-shadow:var(--outline),inset 0 0 0 1px var(--hover),var(--btn_shadow_active);background:url(../images/arrow_right.svg) no-repeat 12px calc(50% + 1px) / 19px,var(--badge_active) !important;background-blend-mode:luminosity}
+#jumplinks #linuxfarm{background:url(../images/linuxfarm.svg) no-repeat 10px center/20px,var(--badge) !important;display:none}
+#jumplinks #notbob{background:url(../images/notbob.png) no-repeat 10px center/20px,var(--badge)}
+#jumplinks #reg{background:url(../images/reg.svg) no-repeat 10px center/20px,var(--badge)}
+#jumplinks #stats{background:url(../images/stats.svg) no-repeat 10px center/20px,var(--badge);display:none}
+#proxy_error #jumplinks a:hover,#proxy_error #jumplinks a:focus{box-shadow:var(--outline),inset 0 0 0 1px var(--hover);background:url(../images/arrow_right.svg) no-repeat 10px center/20px,var(--badge_hover) !important}
+#proxy_error #jumplinks a:active{padding:10px 12px 8px 35px;color:var(--hover);text-shadow:0 1px 1px rgba(0,0,0,.8);box-shadow:var(--outline),inset 0 0 0 1px var(--hover),var(--btn_shadow_active);background:url(../images/arrow_right.svg) no-repeat 12px calc(50% + 1px)/19px,var(--badge_active) !important;background-blend-mode:luminosity}
 
 #b64,#key{white-space:pre-wrap;word-break:break-all;text-align:justify;font-family:var(--monospaced);font-size:90%;user-select:all}
 #key{margin:20px 0 25px;padding:10px 14px;border:1px solid 1px solid rgba(38,35,92,.7);background:#000}
@@ -82,7 +82,7 @@ button.go:active,button.accept:active{background:var(--yes) no-repeat 8px center
 .warning p + .formaction{margin:15px -5px;padding:0;border:none;background:none}
 form[action="http://proxy.i2p/add"]{margin-bottom:15px}
 .proxyfooter{display:none}
-#proxyrequest{margin-bottom:15px;padding:9px 10px 5px 22px;background:var(--link) no-repeat left center / 16px}
+#proxyrequest{margin-bottom:15px;padding:9px 10px 5px 22px;background:var(--link) no-repeat left center/16px}
 #proxyrequest + hr{margin:10px 0 20px}
 #proxyNewAddressHelper .warning{padding-bottom:25px}
 #proxyNewAddressHelper hr{margin-left:-6px;margin-right:-6px}
